* Completed application daemon logic

--- a/app/config/sample_config.ini
+++ b/app/config/sample_config.ini
@@ -13,6 +13,10 @@
 app_lock = /tmp/SMStoXMPP.lock
 app_log = /tmp/SMStoXMPP.log
 
+; Non-privilaged user to run as (note: logs must be writable by this user)
+app_user = nobody
+app_group = nobody
+
 ; Optional feature to have the application lookup and resolve phone numbers against a
 ; CARDDAV network address book.
 contacts_lookup = yes
