First complete end-to-end functional version

--- a/app/config/sample_config.ini
+++ b/app/config/sample_config.ini
@@ -13,7 +13,7 @@
 app_lock = /tmp/SMStoXMPP.lock
 app_log = /tmp/SMStoXMPP.log
 
-; Non-privilaged user to run as (note: logs must be writable by this user)
+; Non-privilaged user to run as (note: logs & lock file must be writable by this user)
 app_user = nobody
 app_group = nobody
 
@@ -35,26 +35,26 @@ contacts_password = password
 ;  "eu.apksoft.android.smsgateway"
 ;     SMS Gateway by APK (https://play.google.com/store/apps/details?id=eu.apksoft.android.smsgateway&hl=en)
 ;
-;
-;
-; [example]
-; gw_type = eu.apksoft.android.smsgateway
-; gw_path = auto
-;  ; By default we figure this out - if incorrect, try setting the address explicitly:
-;  ; gw_path = http://192.168.0.1:9090/sendsms
-; xmpp_server = xmpp.example.com
-; xmpp_username = user
-; xmpp_password = password
-; xmpp_domain = example.com
+;     [example]
+;     gw_type = eu.apksoft.android.smsgateway
+;     gw_path = auto
+;      ; By default we figure this out automaticlaly, however this will break if the connection
+;      ; between the phone and here goes via NAT. If incorrect, try setting the address explicitly:
+;      ; gw_path = 192.168.0.1:9090
+;     xmpp_server = xmpp.example.com
+;     xmpp_username = sender
+;     xmpp_domain = example.com
+;     xmpp_password = password
+;     xmpp_reciever = targetuser@example.com
 ;
 
 [myphone]
 gw_type = eu.apksoft.android.smsgateway
-gw_path = auto
+gw_path = 10.8.5.234:9090
 xmpp_server = xmpp.jethrocarr.com
 xmpp_username = sms-jethro
-xmpp_password = 3et4erw
 xmpp_domain = jethrocarr.com
+xmpp_password = 3et4erw
 xmpp_reciever = jethro@jethrocarr.com
 
 
