Removed (and reset ;-) test password and adjusted sample config for general use.

--- a/app/config/sample_config.ini
+++ b/app/config/sample_config.ini
@@ -10,19 +10,20 @@
 [SMStoXMPP]
 
 ; General options (don't normally need to adjust these)
-app_lock = /tmp/SMStoXMPP.lock
-app_log = /tmp/SMStoXMPP.log
+app_lock = /var/lock/SMStoXMPP.lock
+app_log	 = /var/log/SMStoXMPP.log
 
 ; Non-privilaged user to run as (note: logs & lock file must be writable by this user)
-app_user = nobody
+app_user  = nobody
 app_group = nobody
 
 ; Optional feature to have the application lookup and resolve phone numbers against a
-; CARDDAV network address book.
-contacts_lookup = yes
-contacts_url = http://www.example.com/carddav/user
-contacts_username = user 
-contacts_password = password
+; CardDAV network address book. Examples of CardDAV address books include Google
+; contacts used by most Android phones.
+contacts_lookup 	= false
+contacts_url		= http://www.example.com/carddav/user
+contacts_username	= user 
+contacts_password	= password
 
 
 ;
@@ -45,16 +46,16 @@ contacts_password = password
 ;     xmpp_username = sender
 ;     xmpp_domain = example.com
 ;     xmpp_password = password
-;     xmpp_reciever = targetuser@example.com
+;     xmpp_reciever = targetuser@example.org
 ;
 
 [myphone]
-gw_type = eu.apksoft.android.smsgateway
-gw_path = 10.8.5.234:9090
-xmpp_server = xmpp.jethrocarr.com
-xmpp_username = sms-jethro
-xmpp_domain = jethrocarr.com
-xmpp_password = 3et4erw
-xmpp_reciever = jethro@jethrocarr.com
+gw_type		= eu.apksoft.android.smsgateway
+gw_path		= auto
+xmpp_server	= xmpp.sender.com
+xmpp_username	= sender
+xmpp_domain	= example.com
+xmpp_password	= password123
+xmpp_reciever	= targetuser@example.org
 
 
