Initial packaging build

--- a/resources/smstoxmpp-httpdconfig.conf
+++ b/resources/smstoxmpp-httpdconfig.conf
@@ -1,14 +1,12 @@
 #
-# SMStoXMPP is an open-source PHP application for administrating
-# DNS zones stored inside a MySQL database.
+# This is the listener component for the SMStoXMPP application, a daemon
+# which exchanges messages between SMS gateways and XMPP servers
 #
-#
-Alias /smstoxmpp /usr/share/smstoxmpp/htdocs
+Alias /smstoxmpp /usr/share/smstoxmpp/app/listener.php
 
 <Location /smstoxmpp>
 	Order deny,allow
 	Allow from all
-	AllowOverride all
 </Location>
 
 
