Implemnted fixes to dispatcher

--- a/app/config/sample_config.ini
+++ b/app/config/sample_config.ini
@@ -10,8 +10,8 @@
 [SMStoXMPP]
 
 ; General options (don't normally need to adjust these)
-app_lock = /var/lock/SMStoXMPP.lock
-app_log	 = /var/log/SMStoXMPP.log
+app_lock = /var/lock/smstoxmpp.lock
+app_log	 = /var/log/smstoxmpp.log
 
 ; Non-privilaged user to run as (note: logs & lock file must be writable by this user)
 app_user  = nobody
