* Added example for Google with CardDAV

--- a/app/config/sample_config.ini
+++ b/app/config/sample_config.ini
@@ -20,10 +20,20 @@ app_group = nobody
 ; Optional feature to have the application lookup and resolve phone numbers against a
 ; CardDAV network address book. Examples of CardDAV address books include Google
 ; contacts used by most Android phones.
+;
+; Example:
+;  Google:
+;	contacts_lookup = true
+;	contacts_url = https://google.com/m8/carddav/principals/__uids__/user@gmail.com/lists/default/
+;	contacts_username = user@gmail.com
+;	contacts_password = password1234
+;	contacts_store = /var/lib/smstoxmpp/contacts/
+;
 contacts_lookup 	= false
 contacts_url		= http://www.example.com/carddav/user
 contacts_username	= user 
 contacts_password	= password
+contacts_store		= /var/lib/smstoxmpp/contacts/
 
 
 ;
